---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: ?. ?. ?
  Compatibility:
    - Incompatibility with ick-automatic-train-repair
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 16. 11. 2023
  Compatibility:
    - Added recycle recipes for Space Exploration mod
  Graphics:
    - Made locomotive smoke lower
  Changes:
    - Destroyed rolling stock not millitary target for biters
    - Increased health for destroyed rolling stock
  Other:
    - Synced mod major and minor version with game version
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 22. 09. 2023
  Bugfixes:
    - Not execute post action for trains without destroying rolling stock
    - Fix showing changelog in game
    - Check existing depot station for on_train_changed_state
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 18. 09. 2023
  Bugfixes:
    - Fix trying work with every destroyed entity as with strong rolling stock
    - Fix wrong and corrupted translation
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 18. 09. 2023
  Bugfixes:
    - Initialize inner mod vars in on_load/on_init
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 18. 09. 2023
  Documentation:
    - Add information about localization
    - Removed incompatibility with "ick-automatic-train-repair"
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 18. 09. 2023
  Changes:
    - Added strong rolling stock which not fully destroyable